[package]
name = "minicbor-ser"
version = "0.1.3"
edition = "2018"
authors = ["oh-wind"]
description = "A simple implementation of serde for minicbor"
repository = "https://github.com/oh-wind/minicbor-ser"
license = "MIT"
keywords = ["cbor", "serde", "minicbor", "binary"]
categorys = ["encoding"]
readme = "README.md"

[package.metadata.docs.rs]
features = ["std"]

[dependencies]
serde = {version = "1.0.*", default-features = false}

[dependencies.minicbor]
version = "~0.11"
features = ["alloc"]

[dev-dependencies]
serde = {version = "1.0.*", features = ["derive"]}



[features]
std = ["serde/std", "minicbor/std", "minicbor/alloc"]
default = ["std"]